added parking and adjusted idVersion as number in swagger

--- a/swagger/RAP_1_0_0.yaml
+++ b/swagger/RAP_1_0_0.yaml
@@ -154,8 +154,8 @@ components:
           type: string
         idVersion:
           description: "Versione di elaborazione"
-          example: "1"
-          type: string
+          example: 1
+          type: number
         xsdVersion:
           description: "Soglia massima di versione xsd utilizzata per la conversione"
           example: 1
